[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path="src/lib.rs"

[[bin]]
path="src/main.rs"
name="zero2prod"

# Fast compile times during development
# On Windows
# ```
# cargo install -f cargo-binutils
# rustup component add llvm-tools-preview
# ```
[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]


[dependencies]
actix-web = "4"
reqwest = "0.11.11"
serde = {version="1.0.144", features=["derive"]}
tokio = {version="1",features=["macros","rt-multi-thread"]}
config = "0.13"
uuid = {version="1.1.2",features=["v4"]}
chrono = "0.4.15"
env_logger = "0.9"
# log = "0.4"
tracing = {version="0.1",features=["log"]}

[dependencies.sqlx]
version="0.6"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]
